Fix scrollbar styles

--- a/Laboratory_Activities/Laboratory_Activity_4_11-28-2024/styles.css
+++ b/Laboratory_Activities/Laboratory_Activity_4_11-28-2024/styles.css
@@ -82,6 +82,10 @@ body {
     margin-bottom: 1rem;
 }
 
+.about__main-left .custom-h3 {
+    margin-top: 1rem;
+}
+
 #typing-effect::after {
     content: '|';
     display: inline-block;
@@ -142,11 +146,13 @@ body {
     height: 80%;
     border: 5px solid var(--dark-primary-color);
     border-radius: 50rem;
+    filter: drop-shadow(0px 0px 20px var(--primary-color)) 
+            brightness(1);
     transition: transform 0.6s ease;
 }
 
 .about__main-right .about__img.spin {
-    animation: horizontal-spin 1s ease-in-out; /* Adjust duration as needed */
+    animation: horizontal-spin 1s ease-in-out;
 }
 
 .about__body {
@@ -175,6 +181,11 @@ body {
     width: 10%;
     height: 30%;
     filter: drop-shadow(0px 0px 12px var(--primary-color));
+    transition: transform 0.5s ease;
+}
+
+.about__coding-section img:hover { 
+    transform: scale(1.3);
 }
 
 .about__gaming-section {
@@ -247,7 +258,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-	background: var(--primary-color);
+	background: var(--background-color);
 }
 
 ::-webkit-scrollbar-thumb:hover {
